Creacion de fichero: HTML5, CSS3 - Bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@ HTML5, CSS3 - BASICO/assets/fonts/
 
 HTML5, CSS3 - AVANZADO/assets/fonts/
 
+# IMAGENES
 HTML5, CSS3 - AVANZADO/assets/img/
+
+# BOOTSTRAP
+HTML5, CSS3 - BOOTSTRAP/bootstrap/
